Fix errors and update backend